force-app/main/default/objects/Case/fields/Is_Assign_to_Agent__c.field-meta.xml
<CustomField>
    <fullName>Is_Assign_to_Agent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Assign to Agent</label>
    <type>Checkbox</type>
</CustomField>