force-app/main/default/objects/Case/fields/SQX_NC_Reference__c.field-meta.xml
<CustomField>
    <fullName>SQX_NC_Reference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NC Reference</label>
    <referenceTo>SQX_Nonconformance__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>