force-app/main/default/objects/Case/listViews/AllOpenCases.listView-meta.xml
<ListView>
    <fullName>AllOpenCases</fullName>
    <booleanFilter>1 AND 2 AND 3 AND 4</booleanFilter>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER_NAME</field>
        <operation>notContain</operation>
        <value>East</value>
    </filters>
    <filters>
        <field>OWNER_NAME</field>
        <operation>notContain</operation>
        <value>West</value>
    </filters>
    <filters>
        <field>OWNER_NAME</field>
        <operation>notContain</operation>
        <value>South</value>
    </filters>
    <filters>
        <field>OWNER_NAME</field>
        <operation>notContain</operation>
        <value>North</value>
    </filters>
    <label>All Open Cases</label>
</ListView>