force-app/main/default/objects/Case/listViews/East_Case.listView-meta.xml
<ListView>
    <fullName>East_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>East</label>
    <queue>East</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>