force-app/main/default/objects/Case/listViews/GLOBAL_Case.listView-meta.xml
<ListView>
    <fullName>GLOBAL_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>GLOBAL</label>
    <queue>GLOBAL</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>