force-app/main/default/objects/Case/listViews/North_Case.listView-meta.xml
<ListView>
    <fullName>North_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>North</label>
    <queue>North</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>