force-app/main/default/objects/Case/listViews/Queue_Assignment_Case.listView-meta.xml
<ListView>
    <fullName>Queue_Assignment_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Queues</label>
    <queue>Queue_Assignment</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>