force-app/main/default/objects/Case/listViews/South_Case.listView-meta.xml
<ListView>
    <fullName>South_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>South</label>
    <queue>South</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>