force-app/main/default/objects/Case/listViews/West_Case.listView-meta.xml
<ListView>
    <fullName>West_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>West</label>
    <queue>West</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>